--- a/generate_tables.ipynb
+++ b/generate_tables.ipynb
@@ -199,11 +199,11 @@
    "source": [
     "def generate_tables(stats, years):\n",
     "    result = stats_to_tables_continous(stats, {})\n",
-    "    show_table(result[1], f\"Continous Values - {years}\", \"\", \"float\", f\"continous_chi_pvalue_{years}.png\")\n",
+    "    show_table(result[1], f\"Continous Values - {years}\", \"\", \"float\", f\"continous_t_pvalue_{years}.png\")\n",
     "    show_table(result[0], f\"Continous Values - {years}\", \"Example\", \"int\", f\"continous_mean_var_{years}.png\")\n",
     "    result = stats_to_tables_categorial(stats, code_to_names_categorial)\n",
     "    show_table(result[0], \"\", \"\", \"int\", f\"categorial_counts_percentage_{years}.png\")\n",
-    "    show_table(result[1], \"\", \"\", \"float\", f\"categorial_chi_pvalue_{years}.png\")"
+    "    show_table(result[1], \"\", \"\", \"float\", f\"categorial_t_pvalue_{years}.png\")"
    ]
   },
   {
